Fix loading spinner z-index issues. Move spinner images to component directory

--- a/src/components/LoadingIndicator/loading-indicator.scss
+++ b/src/components/LoadingIndicator/loading-indicator.scss
@@ -16,24 +16,23 @@
 .fadein {
   animation: fadein 1s;
   opacity: 1;
-  z-index: 1;
 }
 
 .fadeout {
   animation: fadeout 1s;
   opacity: 0;
-  z-index: -9999;
 }
 
 .loading-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-
-  display: flex;
   background: rgba(255, 255, 255, 0.6);
+  bottom: 0;
+  display: flex;
+  left: 0;
+  pointer-events:none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 999;
 
   .casumo-spinner {
     height: 165px;
